# devops-workshop-solution

./: .gitignore  Taskfile.yaml
.github/workflows/: lab1-integrations-tests.yml  lab2-integration-tests.yml  lab3-integration-tests.yml  lab4-integration-tests.yml
lab1/: Taskfile.yaml  lib.py  pyproject.toml  test_lib.py
lab2/: Taskfile.yaml  pyproject.toml  test_util.py  util.py
lab3/: Taskfile.yaml  pyproject.toml  test_user.py  user.py
lab4/: Taskfile.yml  package-lock.json  package.json  playwright.config.js
lab4/src/: App.css  App.jsx  index.css
lab4/tests/: chess.spec.js
