[tool.poetry]
name = "linear-algebra-lib"
version = "0.1.0"
description = "A simple linear algebra library for educational purposes and test practice"
authors = ["namwoam <namwoam@gmail.com>"]
packages = [{include = "lab1"}]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"
pytest-cov = "^4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["."]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
